--- a/css/screen.css
+++ b/css/screen.css
@@ -1,30 +1,31 @@
-@media only screen and (min-width: 320px) {
-  body {
+body {
     background-color: lightblue;
   }
+
+
+
+
+@media only screen and (min-width: 320px) {
+  #wrapper {
+  }
+  #main {
+  }
+  .form_comp {
+  }
+  
 }
 @media only screen and (min-width: 481px) {
-  body {
-    background-color: lightblue;
-  }
+
 }
 @media only screen and (min-width: 601px) {
-  body {
-    background-color: lightblue;
-  }
+
 }
 @media only screen and (min-width: 1025px) {
-  body {
-    background-color: lightblue;
-  }
+
 }
 @media only screen and (min-width: 1281px) {
-  body {
-    background-color: lightblue;
-  }
+
 }
 @media only screen and (min-width: 1441px) {
-  body {
-    background-color: lightblue;
-  }
+
 }
