--- a/css/screen.css
+++ b/css/screen.css
@@ -1,11 +1,11 @@
 body {
-    background-color: lightblue;
-  }
+  background-color: lightblue;
+}
 
 
 
 
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 320px) { /*Small devices*/
   #wrapper {
   }
   #main {
@@ -14,18 +14,12 @@ body {
   }
   
 }
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: 601px) { /*Medium devices*/
 
 }
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 1025px) { /*Large devices*/
 
 }
-@media only screen and (min-width: 1025px) {
-
-}
-@media only screen and (min-width: 1281px) {
-
-}
-@media only screen and (min-width: 1441px) {
+@media only screen and (min-width: 1281px) { /*Extra Large devices*/
 
 }
