--- a/css/screen.css
+++ b/css/screen.css
@@ -1,7 +1,13 @@
 body {
   background-color: lightblue;
+  width: 100px;
+  height: 100px;
+  overflow: scroll;
 }
-
+.form_comp {
+  width: 100%;
+  height: 100%;
+}
 
 
 
