--- a/css/screen.css
+++ b/css/screen.css
@@ -1,3 +1,7 @@
+#header {
+  width: 100%
+  height: 100%;
+}
 body {
   background-color: lightblue;
   width: 100%;
@@ -7,6 +11,9 @@ body {
 .form_comp {
   width: 100%;
   height: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
 }
 
 @media only screen and (min-width: 601px) { /*Medium devices*/
