--- a/css/screen.css
+++ b/css/screen.css
@@ -1,18 +1,24 @@
-#header {
-  width: 100%
-  height: 100%;
-}
 body {
   background-color: lightblue;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow-y: scroll;
 }
-.form_comp {
+#header {
+  width: 100%
+  height: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+}
+#wrapper {
   width: 100%;
   height: 100%;
   padding: 12px 20px;
   margin: 8px 0;
+  box-sizing: border-box;
+}
+.main {
+  padding: 12px 20px;
   box-sizing: border-box;
 }
 
