--- a/css/screen.css
+++ b/css/screen.css
@@ -9,16 +9,17 @@ body {
   height: 100%;
   padding: 12px 20px;
   margin: 8px 0;
+  text-align: center;
 }
 #wrapper {
   width: 100%;
   height: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin: 4px 0;
   box-sizing: border-box;
 }
 .main {
-  padding: 12px 20px;
+  padding: 12px 15px;
   box-sizing: border-box;
 }
 
