--- a/css/screen.css
+++ b/css/screen.css
@@ -8,19 +8,26 @@ body {
   width: 100%
   height: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
   text-align: center;
+  font-size: 3em;
+}
+#form_title {
+  font-size: 1.5em;
 }
 #wrapper {
   width: 100%;
   height: 100%;
-  padding: 12px 20px;
-  margin: 4px 0;
-  box-sizing: border-box;
+  margin: 0;
+  text-align: left;
 }
 .main {
-  padding: 12px 15px;
-  box-sizing: border-box;
+  padding: 15px;
+  width: 100%;
+  height: 100%;
+  
 }
 
 @media only screen and (min-width: 601px) { /*Medium devices*/
