--- a/css/screen.css
+++ b/css/screen.css
@@ -21,13 +21,20 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
-  text-align: left;
 }
 .main {
   padding: 15px;
   width: 100%;
   height: 100%;
-  
+}
+input[type="text"], input[type="email"], input[type="date"] {
+  width: 100%;
+  padding: 12px;
+  margin: 8px 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  box-sizing: border-box;
 }
 
 @media only screen and (min-width: 601px) { /*Medium devices*/
