--- a/css/screen.css
+++ b/css/screen.css
@@ -9,32 +9,30 @@ body {
   height: 100%;
   padding: 12px 20px;
   margin-top: 20px;
-  margin-left: 20px;
   margin-bottom: 20px;
   text-align: center;
   font-size: 3em;
 }
 #form_title {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 #wrapper {
   width: 100%;
   height: 100%;
-  margin: 0;
 }
 .main {
-  padding: 15px;
   width: 100%;
   height: 100%;
+  font-size: 1.5em;
+  margin: 30px 0;
 }
 input[type="text"], input[type="email"], input[type="date"] {
   width: 100%;
   padding: 12px;
-  margin: 8px 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  margin: 30px 8px;
   font-size: 1rem;
   box-sizing: border-box;
+  float: left;
 }
 
 @media only screen and (min-width: 601px) { /*Medium devices*/
