--- a/css/screen.css
+++ b/css/screen.css
@@ -24,12 +24,13 @@ body {
   width: 100%;
   height: 100%;
   font-size: 1.5em;
-  margin: 30px 0;
+  margin: auto;
 }
 input[type="text"], input[type="email"], input[type="date"] {
-  width: 100%;
+  width: 95%;
   padding: 12px;
-  margin: 30px 8px;
+  margin: 15px auto;
+  margin-left: auto;
   font-size: 1rem;
   box-sizing: border-box;
   float: left;
