--- a/css/screen.css
+++ b/css/screen.css
@@ -17,11 +17,12 @@ body {
   font-size: 2em;
 }
 #wrapper {
-  width: 100%;
+  width: 95%%;
   height: 100%;
+  text-align: left;
 }
 .main {
-  width: 100%;
+  width: 95%;
   height: 100%;
   font-size: 1.5em;
   margin: auto;
@@ -33,7 +34,6 @@ input[type="text"], input[type="email"], input[type="date"] {
   margin-left: auto;
   font-size: 1rem;
   box-sizing: border-box;
-  float: left;
 }
 
 @media only screen and (min-width: 601px) { /*Medium devices*/
