--- a/css/screen.css
+++ b/css/screen.css
@@ -27,10 +27,15 @@ body {
   font-size: 1.5em;
   margin: auto;
 }
+label {
+  display: block;
+  width: 95%;
+  margin: 0 auto;
+}
 input[type="text"], input[type="email"], input[type="date"] {
   width: 95%;
   padding: 12px;
-  margin: 15px auto;
+  margin: 0 auto;
   margin-left: auto;
   font-size: 1rem;
   box-sizing: border-box;
