--- a/css/screen.css
+++ b/css/screen.css
@@ -3,50 +3,117 @@ body {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  margin: 0;
+  padding: 0;
 }
+
 #header {
-  width: 100%
-  height: 100%;
+  width: 100%;
   padding: 12px 20px;
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
   font-size: 3em;
 }
+
 #form_title {
   font-size: 2em;
 }
+
 #wrapper {
-  width: 95%%;
-  height: 100%;
-  text-align: left;
-}
-.main {
   width: 95%;
   height: 100%;
-  font-size: 1.5em;
-  margin: auto;
+  text-align: left;
+  margin: 0 auto;
 }
+
+.main {
+  width: 95%;
+  margin: auto;
+  font-size: 1.5em;
+}
+
 label {
   display: block;
   width: 95%;
   margin: 0 auto;
 }
+
 input[type="text"], input[type="email"], input[type="date"] {
   width: 95%;
   padding: 12px;
-  margin: 0 auto;
-  margin-left: auto;
+  margin: 10px 0;
   font-size: 1rem;
   box-sizing: border-box;
 }
 
-@media only screen and (min-width: 601px) { /*Medium devices*/
-
+/* Media Query for smaller devices (Mobile-first approach) */
+@media only screen and (max-width: 600px) {
+  #wrapper {
+    display: block;
+  }
+  
+  .main {
+    display: block;
+  }
+  
+  input[type="text"], input[type="email"], input[type="date"] {
+    width: 100%;
+  }
+  
+  /* Make the text box appear below on mobile */
+  .form-container {
+    display: block;
+  }
 }
-@media only screen and (min-width: 1025px) { /*Large devices*/
 
+/* Media Query for medium devices (Tablet and smaller laptops) */
+@media only screen and (min-width: 601px) and (max-width: 1024px) {
+  #wrapper {
+    display: block;
+  }
+  
+  .main {
+    display: block;
+  }
+  
+  /* Adjust input box size if necessary */
+  input[type="text"], input[type="email"], input[type="date"] {
+    width: 95%;
+  }
+  
+  .form-container {
+    display: block;
+  }
 }
-@media only screen and (min-width: 1281px) { /*Extra Large devices*/
 
+/* Media Query for large devices (Desktops) */
+@media only screen and (min-width: 1025px) {
+  #wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .main {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  /* Align the text box to the right on desktop */
+  .form-container {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  input[type="text"], input[type="email"], input[type="date"] {
+    width: 60%; /* Adjust this width if you want more space */
+  }
+}
+
+/* Media Query for extra large devices (Very large desktops) */
+@media only screen and (min-width: 1281px) {
+  .main {
+    font-size: 1.8em; /* Optionally scale the font size for larger screens */
+  }
 }
