--- a/css/screen.css
+++ b/css/screen.css
@@ -104,6 +104,10 @@ input[type="text"], input[type="email"], input[type="date"] {
 
 /* Media Query for large devices (Desktops) */
 @media only screen and (min-width: 1025px) {
+  fieldset {
+    margin-bottom: 50px; /* Adjust this value to increase or decrease the spacing */
+  }
+  
   #wrapper {
     display: flex;
     justify-content: space-between;
