--- a/css/screen.css
+++ b/css/screen.css
@@ -3,7 +3,7 @@ body {
   width: 100%;
   height: 100%;
   overflow-y: scroll;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -16,7 +16,7 @@ body {
   font-size: 3em;
 }
 
-#form_title {
+.form_title {
   font-size: 2em;
 }
 
@@ -29,8 +29,9 @@ body {
 
 .main {
   width: 95%;
-  margin: auto;
+  margin: 0 auto;
   font-size: 1.5em;
+  text-align: right;
 }
 
 label {
@@ -38,7 +39,6 @@ label {
   width: 95%;
   margin: 0 auto;
 }
-
 input[type="text"], input[type="email"], input[type="date"] {
   width: 95%;
   padding: 12px;
@@ -46,7 +46,10 @@ input[type="text"], input[type="email"], input[type="date"] {
   font-size: 1rem;
   box-sizing: border-box;
 }
-
+#submit {
+  margin: 10px auto;
+  padding: 0 15px;
+}
 /* Media Query for smaller devices (Mobile-first approach) */
 @media only screen and (max-width: 600px) {
   #wrapper {
